# FlareEngine

./: .gitmodules  3RD-PARTY SOURCES.md  CMakeLists.txt  README.md  build.sh  buildDebug.sh  buildWithSymbols.sh  clean.sh  crossWinBuild.sh  setup.bat  setup.sh
FlareBase/include/: ColladaLoader.h  OBJLoader.h
FlareBase/include/Flare/: FlareAssert.h  RenderProgram.h
FlareBase/src/: ColladaLoader.cpp  InputBindings.cpp  OBJLoader.cpp
FlareCS/src/: AssetLibrary.cs  Component.cs  EditorTooltipAttribute.cs  GameObject.cs  HideInEditorAttribute.cs  IDestroy.cs  Input.cs  Logger.cs  PrimitiveGenerator.cs  Program.cs  Scene.cs  Scriptable.cs  Transform.cs
FlareCS/src/Definitions/: CameraDef.cs  ComponentDef.cs  Def.cs  DefLibrary.cs  DirectionalLightDef.cs  GameObjectDef.cs  LightDef.cs  MaterialDef.cs  MeshRendererDef.cs  PointLightDef.cs  SpotLightDef.cs
FlareCS/src/Maths/: Color.cs  Mathf.cs  Matrix4.cs  Quaternion.cs  Vector2.cs  Vector3.cs  Vector4.cs
FlareCS/src/Mod/: FlareAssembly.cs  FlareAssemblyInfo.cs  ModControl.cs
FlareCS/src/Rendering/: Camera.cs  DefaultRenderPipeline.cs  Material.cs  MeshRenderer.cs  Model.cs  PixelShader.cs  RenderCommand.cs  RenderPipeline.cs  RenderTexture.cs  Texture.cs  TextureSampler.cs  VertexShader.cs
FlareCS/src/Rendering/Lighting/: DirectionalLight.cs
FlareNative/: CMakeLists.txt  FlareNativeConfig.h.in
FlareNative/include/: Config.h  InputManager.h  Logger.h  Scribe.h  Trace.h
FlareNative/include/AppWindow/: HeadlessAppWindow.h
FlareNative/include/Rendering/: RenderProgram.h  ShaderBufferInput.h
FlareNative/include/Rendering/Vulkan/: VulkanGraphicsEngine.h  VulkanGraphicsEngineBindings.h  VulkanRenderCommand.h  VulkanShaderData.h
FlareNative/shaders/: spotLight.fpix
FlareNative/src/: AssetLibrary.cpp  Font.cpp  HeadlessAppWindow.cpp  InputManager.cpp  Logger.cpp  ObjectManager.cpp  Profiler.cpp  RuntimeManager.cpp  Scribe.cpp  SpirvTools.cpp  VulkanGraphicsEngine.cpp  VulkanGraphicsEngineBindings.cpp  VulkanPipeline.cpp  VulkanPixelShader.cpp  VulkanRenderCommand.cpp  VulkanRenderEngineBackend.cpp  VulkanRenderTexture.cpp  VulkanShaderData.cpp  VulkanSwapchain.cpp  VulkanTexture.cpp  VulkanTextureSampler.cpp  VulkanUniformBuffer.cpp  VulkanVertexShader.cpp  main.cpp
cpp/: CMakeLists.txt  FlashFireNativeConfig.h.in
cpp/Headless/: PipeMessage.h
cpp/Shared/: InputBindings.h  PipeMessage.h
cpp/include/: .gitignore  Application.h  Config.h  FlareAssert.h  FlarePlatform.h  InputManager.h  ObjectManager.h  Profiler.h  RuntimeManager.h  Scribe.h  Trace.h
cpp/include/AppWindow/: AppWindow.h  GLFWAppWindow.h  HeadlessAppWindow.h
cpp/include/DataTypes/: TArray.h  TStatic.h
cpp/include/Rendering/: CameraBuffer.h  Light.h  MaterialRenderStack.h  MeshRenderBuffer.h  RenderEngine.h  RenderEngineBackend.h  RenderProgram.h  ShaderBufferInput.h  ShaderBuffers.h  SpirvTools.h  TextureSampler.h  VertexInputAttrib.h  Vertices.h  Viewport.h
cpp/include/Rendering/IO/: ColladaLoader.h  OBJLoader.h
cpp/include/Rendering/Vulkan/: VulkanConstants.h  VulkanGraphicsEngine.h  VulkanGraphicsEngineBindings.h  VulkanModel.h  VulkanPipeline.h  VulkanPixelShader.h  VulkanRenderCommand.h  VulkanRenderEngineBackend.h  VulkanRenderPass.h  VulkanRenderTexture.h  VulkanShader.h  VulkanShaderData.h  VulkanSwapchain.h  VulkanTextureSampler.h  VulkanUniformBuffer.h  VulkanVertexShader.h
cpp/include/Runtime/: RuntimeManager.h
cpp/shaders/: directionalLight.fpix  directionalLight.frag  pointLight.fpix  spotLight.fpix
cpp/src/: Application.cpp  AssetLibrary.cpp  ColladaLoader.cpp  Config.cpp  Font.cpp  GLFWAppWindow.cpp  GLFWWindow.cpp  HeadlessAppWindow.cpp  InputManager.cpp  Logger.cpp  MaterialRenderStack.cpp  OBJLoader.cpp  ObjectManager.cpp  Profiler.cpp  RenderEngine.cpp  RuntimeManager.cpp  Scribe.cpp  SpirvTools.cpp  VulkanGraphicsEngine.cpp  VulkanGraphicsEngineBindings.cpp  VulkanModel.cpp  VulkanPipeline.cpp  VulkanPixelShader.cpp  VulkanRenderCommand.cpp  VulkanRenderEngineBackend.cpp  VulkanRenderPass.cpp  VulkanRenderTexture.cpp  VulkanShaderData.cpp  VulkanSwapchain.cpp  VulkanTextureSampler.cpp  VulkanUniformBuffer.cpp  VulkanVertexShader.cpp  main.cpp
cs/: CMakeLists.txt  FlareCS.csproj  FlashFireCS.csproj
cs/src/: Application.cs  AssetLibrary.cs  Component.cs  GameObject.cs  HideInEditorAttribute.cs  Input.cs  Logger.cs  Object.cs  Profiler.cs  Program.cs  Scribe.cs  Time.cs  Transform.cs  Vector2.cs  Vector3.cs  Vector4.cs
cs/src/Definitions/: CameraDef.cs  ComponentDef.cs  Def.cs  DefLibrary.cs  DefTableAttribute.cs  GameObjectDef.cs  LightDef.cs  MaterialDef.cs  MeshRendererDef.cs  ObjectDef.cs  PointLightDef.cs  SpotLightDef.cs
cs/src/Maths/: Color.cs  Matrix4.cs  Quaternion.cs  Vector2.cs  Vector3.cs  Vector4.cs
cs/src/Mod/: AssenblyControl.cs  FlareAssembly.cs  FlareAssemblyInfo.cs  ModControl.cs
cs/src/Rendering/: Camera.cs  DefaultRenderPipeline.cs  IRenderTexture.cs  Material.cs  MeshRenderer.cs  Model.cs  MultiRenderTexture.cs  PixelShader.cs  RenderCommand.cs  RenderPipeline.cs  RenderTexture.cs  RenderTextureCmd.cs  TextureSampler.cs  VertexShader.cs  Viewport.cs
cs/src/Rendering/Lighting/: DirectionalLight.cs  Light.cs  PointLight.cs  SpotLight.cs
cs/src/Rendering/UI/: Font.cs
